integ-tests/tests/snapshots/parser__bad_strings__hex.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-hex-escape]: 
  ┌─ hex:1:10
  │
1 │ foo = "\uxx"
  │          ^ invalid hex escape 'x'


